Fix title, spacing, colors?

--- a/css/invoice.css
+++ b/css/invoice.css
@@ -147,7 +147,7 @@
   }
 
   .title .year {
-    color: #e6eaed;
+    color: #ffffff;
   }
 
   .black-bars {
